[gd_scene load_steps=8 format=3 uid="uid://qlvig256hsqp"]

[ext_resource type="Script" uid="uid://cktnvv77tpoxg" path="res://UI/Bars/healthbar.gd" id="1_maj3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_78wtb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oknd6"]
bg_color = Color(0.341617, 0.69294, 0.34342, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvoyn"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3xm4"]
bg_color = Color(1, 0.996078, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_onm16"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqo2w"]
bg_color = Color(0.185222, 0.630603, 0.938335, 1)

[node name="Healthbar" type="ProgressBar"]
z_index = -1
offset_right = 240.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_78wtb")
theme_override_styles/fill = SubResource("StyleBoxFlat_oknd6")
value = 60.0
show_percentage = false
script = ExtResource("1_maj3t")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_uvoyn")
theme_override_styles/fill = SubResource("StyleBoxFlat_g3xm4")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ShieldBar" type="ProgressBar" parent="."]
visible = false
z_index = -2
layout_mode = 0
offset_left = -3.0
offset_top = -4.0
offset_right = 393.0
offset_bottom = 25.0
scale = Vector2(0.927157, 0.818354)
theme_override_styles/background = SubResource("StyleBoxEmpty_onm16")
theme_override_styles/fill = SubResource("StyleBoxFlat_vqo2w")
value = 100.0
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
